# svishwari

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  README.md  codecov.yml  mypy.ini  test.py  tox.ini
Server Side/: Pipfile  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
Server Side/api/: main.py  requirements.txt
Server Side/api/cdm/: spec.yaml
Server Side/api/endpoints/: database.py  datafeeds.py  fieldmappings.py
Server Side/huxunify/: __init__.py  app.py
Server Side/huxunify/api/connectors/: __init__.py
Server Side/huxunify/api/data_connectors/: __init__.py  aws.py  snowflake_client.py
Server Side/huxunify/api/model/: __init__.py  advertising.py  audience.py  cdm.py  decision.py  home.py  marketing.py
Server Side/huxunify/api/route/: advertising.py  audience.py  cdm.py  decision.py  home.py  marketing.py  utils.py
Server Side/huxunify/api/schema/: __init__.py  advertising.py  audience.py  cdm.py  decision.py  errors.py  home.py  marketing.py  utils.py
Server Side/huxunify/test/data_connectors/: test_snowflake_client.py
Server Side/huxunify/test/model/: test_cdm.py
Server Side/huxunify/test/route/: test_advertising_router.py  test_cdm_router.py  test_decision_router.py  test_home_route.py  test_marketing_router.py
lib/huxunifylib/: Pipfile  codefresh.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
lib/huxunifylib-database/: Pipfile  README.md  codefresh.yml  requirements.txt  setup.cfg  setup.py  tox.ini
lib/huxunifylib-database/ci/: codefresh.yml
lib/huxunifylib-database/ci/whitesource/: README.md  codefresh-ws-scan.yml  wss-agent.config  wss-install-commands.sh
lib/huxunifylib-database/huxunifylib/database/: aggregation_pipelines.py  audience_data_management_util.py  audience_management.py  audit_management.py  cache_management.py  cdp_data_source_management.py  client.py  collection_management.py  constants.py  data_management.py  db_exceptions.py  (+11 more)
(+1865 files in other folders)
