[metadata]
name = hux-unified-solution
description = Hux API
long_description = file: README.md
url = 'https://github.com/DeloitteHux/Hux-Unified-Solution/tree/main/Server Side/huxunify'

[options]
packages = find:
setup_requires = setuptools_scm
#install_requires = connexion==2.7.0; flask==1.1.2
include_package_data = True
