[metadata]
name = huxunifylib-database
version = 0.1
url = https://github.com/DeloitteHux/hux-unified/lib/huxunifylib/huxunifylib
description = Hux Unified Database
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:

python_requires = >= 3.7
setup_requires =
  setuptools
install_requires =
  pymongo
  pandas
  tenacity
tests_require =
  mongomock

[bdist_wheel]
universal = true