[metadata]
name = huxunifylib.database
url = https://github.com/DeloitteHux/hux-unified-solution/lib/huxunifylib/huxunifylib
description = Hux Unified Audience Builder Database
long_description = file: README.md

[options]
packages = find:
setup_requires = setuptools_scm
include_package_data = True
