[metadata]
name = huxunifylib.database
url = https://github.com/DeloitteHux/hux-unified/lib/huxunifylib/huxunifylib
description = Hux Unified Audience Builder Database
long_description = file: README.md

[options]
packages = find:
python_requires = >= 3.7
install_requires =
  pymongo
  pandas
  tenacity
  mongomock
